<resources>
    <string name="app_name">MPISHI</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="login">Login</string>
    <string name="passoword">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="grill">Grill</string>
    <string name="mamlaka">Mamlaka</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="search_your_recipes">Search Your Recipes…</string>
    <string name="meal_categories">Meal Categories</string>
    <string name="interstitial_video_ads_id">ca-app-pub-7442278714381165/8368408599</string>
    <string name="dot_loading">...</string>
    <string name="country">Country</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="Ingredients">INGREDIENTS</string>
    <string name="source">INGREDIENTS</string>
    <string name="banner_ads_id">ca-app-pub-7442278714381165/8368408599</string>
    <string name="interstitial_ads_id">ca-app-pub-7442278714381165/8368408599</string>
    <string name="favourite">Favourite</string>
    <string name="a_new_way_to_experience_cooking">A new way to experience cooking</string>
</resources>