<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/foreground_design"
        android:scaleType="centerCrop"
        android:src="@drawable/pizza"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-48dp" />
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_above="@+id/signin"
        app:lottie_enableMergePathsForKitKatAndAbove="true"
        app:lottie_fileName="login.json"
        app:lottie_autoPlay="true"
        app:lottie_loop="true" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signin"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center"
        />
    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#fff"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="20dp"
        android:hint="@string/email"
        android:padding="20dp"
        android:textColor="#DCDCDC"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/inputpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputEmail"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#fff"
        android:drawableLeft="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:hint="@string/passoword"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="#DCDCDC"
        android:textColorHint="#757575" />
    <EditText
        android:id="@+id/inputpassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputpassword"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#fff"
        android:drawableLeft="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="#DCDCDC"
        android:textColorHint="#757575" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginbtn2"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputpassword2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_bg_design"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        android:padding="14dp"
        android:text="@string/sign_up"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgotpass"
        android:layout_below="@+id/loginbtn2"
        android:text="already have an account?"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sighnup"
        android:layout_above="@+id/socialicons"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/orange"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/others"
        android:text="@string/or_sign_in_with"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/socialicons"
        />
    <LinearLayout
        android:id="@+id/socialicons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/chrome"
            android:layout_margin="28dp"
            />
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/facebook"
            android:layout_margin="28dp"
            />
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/twitter"
            android:layout_margin="28dp"
            />

    </LinearLayout>

</RelativeLayout>