<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@color/orange" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="15dp"
            app:cardBackgroundColor="@color/grey"
            app:cardCornerRadius="50dp"
            app:cardElevation="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/search_your_recipes"
                android:textColor="@color/black"
                app:drawableLeftCompat="@drawable/ic_baseline_search_24"
                app:drawableStartCompat="@drawable/ic_baseline_search_24" />
        </androidx.cardview.widget.CardView>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPageHeader"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/cardSearch"
            android:layout_marginTop="10dp"
            android:clipToPadding="false"
            android:foregroundGravity="center"
            android:overScrollMode="never">

            <include
                android:id="@+id/shimmerCategory"
                layout="@layout/item_recycler_category_shimmer" />
        </androidx.viewpager.widget.ViewPager>

        <include
            android:id="@+id/shimmerMeal"
            layout="@layout/item_view_pager_header_shimmmer" />

        <TextView
            android:id="@+id/titleCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewPageHeader"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="16dp"
            android:text="@string/meal_categories"
            android:textColor="@color/orange"
            android:textSize="19sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/titleCategory"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="50dp"
            android:scrollbars="none" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>